--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_shaders: ^0.1.2
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +22,7 @@ flutter:
     - assets/
   shaders:
     - assets/shaders/flask_chart.frag
+    - assets/shaders/glow_screens.frag
     - assets/shaders/gradient.frag
     - assets/shaders/mandelbrot_set.frag
     - assets/shaders/rotating_card.frag
